@@ -47,8 +47,11 @@ public class ExcelTest {
         .setData(list, excelFields).finish();
     long e = System.currentTimeMillis();
     System.err.println(e - s);
-    Runtime.getRuntime()
-        .exec(new String[]{"xdg-open", System.getProperty("user.dir") + "/build/export.xlsx"});
+    openExcel("/build/export.xlsx");
+  }
+
+  private static void openExcel(String x) throws IOException {
+//    Runtime.getRuntime().exec(new String[]{"xdg-open", System.getProperty("user.dir") + x});
   }
 
   private final ExcelField<DataBean, ?>[] excelMergeFields = ArrayUtil.of(
@@ -72,8 +75,7 @@ public class ExcelTest {
         .setMergeData(list, excelMergeFields).finish();
     long e = System.currentTimeMillis();
     System.err.println(e - s);
-    Runtime.getRuntime()
-        .exec(new String[]{"xdg-open", System.getProperty("user.dir") + "/build/export.xlsx"});
+    openExcel("/build/export.xlsx");
   }
 
 
@@ -91,8 +93,7 @@ public class ExcelTest {
     ExcelExport.of("build/template.xlsx").sheet("表格1").dataValidation(1, "1,2,3")
         .template(excelFields)
         .finish();
-    Runtime.getRuntime()
-        .exec(new String[]{"xdg-open", System.getProperty("user.dir") + "/build/template.xlsx"});
+    openExcel("/build/template.xlsx");
   }
 
   public static class DataBean {
